--- a/AI/AI.tex
+++ b/AI/AI.tex
@@ -1,114 +1,143 @@
-% Document class and font size
-\documentclass[a4paper,9pt]{extarticle}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Author: Vignesh Iyer                                 %
+% MS CSE ASU                                           %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% Packages
-\usepackage[utf8]{inputenc} % For input encoding
-\usepackage{geometry} % For page margins
-\geometry{a4paper, margin=0.5in} % Set paper size and margins
-\usepackage{titlesec} % For section title formatting
-\usepackage{enumitem} % For itemized list formatting
-\usepackage{hyperref} % For hyperlinks
+% -------------- README --------------
+% Visit https://github.com/vgnshiyer/ASU-sparkysundevil-resume-template for comprehensive documenation.
 
-% Formatting
-\setlist{noitemsep} % Removes item separation
-\titleformat{\section}{\large\bfseries}{\thesection}{1em}{}[\titlerule] % Section title format
-\titlespacing*{\section}{0pt}{\baselineskip}{\baselineskip} % Section title spacing
+% -------------- Resume ---------------
+\documentclass{resume}
 
-% Begin document
 \begin{document}
 
-% Disable page numbers
-\pagestyle{empty}
+% --------- Contact Information -----------
+\introduction[
+    fullname={Amogh Jagadish Tambad},
+    location={San Francisco, CA},
+    email={tambadamogh@gmail.com},
+    phone={(480) 876-5096},
+    linkedin={linkedin.com/in/ajtambad},
+    github={github.com/Ajtambad}
+]
 
-% Header
-\begin{center}
-\textbf{\huge Amogh Jagadish Tambad}\\[2pt] % Name
-tambadamogh@gmail.com \hspace{1mm} $|$ \hspace{1mm} +1(480) 876-5096  \hspace{1mm} $|$ \hspace{1mm} $linkedin.com/in/ajtambad/$ \hspace{1mm}
-\end{center}
+% --------- Education ---------
+\begin{educationSection}{Education}
+    \educationItem[
+        university={Arizona State University, Tempe, AZ},
+        graduation={May 2025},
+        grade={4.00 GPA},
+        program={Master of Science, Computer Science},
+        coursework={Cloud Computing, Data Processing at Scale, Data Mining, Software Security},
+    ] % ASU
 
-% Education Section
-\section*{EDUCATION}
-\noindent
-\textbf{Master of Science}, Computer Science \hfill May 2025 \\ % University name and location
-Arizona State University
-\hfill GPA: 3.96/4\\ % Degree and GPA
-\textbf{Relevant Coursework:} Cloud Computing, Data Processing at Scale, Data Mining, Data Visualization\\
+    \educationItem[
+        university={REVA University, Bangalore, KA},
+        graduation={May 2021},
+        grade={3.77 GPA},
+        program={Bachelor of Technology, Computer Science},
+        coursework={Data Structure and Algorithms, Operating Systems, Cloud Computing, Computer Networks},
+    ]
+\end{educationSection}
+% --------- Skills -----------
+\begin{skillsSection}{Skills}
+    \skillItem[
+        category={Programming Languages},
+        skills={Python, C++ Go, Java, JavaScript, Typescript, Scala, HTML, XML}
+    ] \\
+    \skillItem[
+        category={LLM/GenAI Frameworks},
+        skills={MCP, LangChain, LangGraph, RAG, VectorDBs (FAISS, ChromaDB)}
+    ] \\
+    \skillItem[
+        category={Technologies},
+        skills={AWS (EC2, Lambda, S3, ECS, CloudFormation, EKS, ECR), Pandas, Numpy, Spark, Docker, Kubernetes, React, Angular, Flask, Node.js, Terraform, Jenkins}
+    ] \\
+    \skillItem[
+        category={Database Systems},
+        skills={SQL(MySQL, PostgreSQL), NoSQL (MongoDB)}
+    ] \\
+    \skillItem[
+        category={Tools},
+        skills={Linux, Git (Version Control), Github, Nginx, Kafka, Redis, Prometheus, Postman, Cursor, CoPilot, Claude Code}
+    ] \\
+    \skillItem[
+        category={Miscellaneous},
+        skills={Distributed Systems, RESTful APIs, Microservices Architecture, Object-Oriented Programming, Agile, Test Driven Development (TDD), Infrastructure-as-code, Cloud Infrastructure, Communication Skills, Collaboration, Writing}
+    ]
+\end{skillsSection}
 
-\noindent
-\textbf{Bachelor of Technology (B.Tech)}, Computer Science and Engineering \hfill May 2021 \\ % University name and location
-REVA University, Bangalore, India \hfill GPA: 8.93/10\\ % Degree and GPA
-\textbf{Relevant Coursework:} Data Structures and Algorithms, Computer Architecture, Operating Systems.
+% --------- Experience -----------
 
-% Skills Section
-\section*{SKILLS}
-\begin{itemize}
-    \item \textbf{Languages:} Python, C++, Bash, C, SQL, Scala, HTML, Java, JavaScript, Groovy. % Programming skills
-    \item \textbf{Tools and Technologies:} AWS (EC2, ECR, SQS, S3, Lambda, SNS), Git, Jenkins, Kafka, Spark, Heroku, Azure, Splunk, Zabbix, Docker, Kubernetes, PostgreSQL, MongoDB, GitHub Actions, Cribl, OpenShift, Minikube. % Software skills
-    \item \textbf{Libraries and Frameworks:} PyTorch, TensorFlow, Flask, OpenCV, Pandas, Keras, scikit-learn, Nginx, React, Node,js.
-\end{itemize}
+    \begin{experienceSection}{Professional Experience}
+    \experienceItem[
+        company={Arizona State University},
+        location={Remote},
+        position={Research Assistant, VISA Lab},
+        duration={Jun 2025 - Present}
+    ]
+    \begin{itemize}
+        \itemsep -6pt {}
+        \item Developed \textbf{FlowBench}, a workflow-based distributed benchmark by leveraging \textbf{Python}, \textbf{Docker}, \textbf{Kubernetes}, and FaaS principles to evaluate custom edge computing applications, providing a comprehensive report on 6+ metrics.
+        \item Built and tested a video analytics workflow via \textbf{OpenCV} on a containerized microservices architecture with Kubernetes, processing 10,000+ frames per minute.
+    \end{itemize}
 
-% Experience Section
-\section*{EXPERIENCE}
-\noindent
-\textbf{IT-Infrastructure-Platform/SRE Intern}
-\hfill Jun 2024 - Aug 2024\\ % Position and duration
-\textit{Arch Mortgage Insurance, Greensboro, North Carolina}
-\begin{itemize}
-    \item Filtered logs and events going from OpenShift Kubernetes Clusters to \textbf{Splunk} using \textbf{Cribl} stream pipelines, reducing Splunk storage utilization by \textbf{40-50 GB/day} with \textbf{20\%} increase in search time.
-    \item Improved readability of Splunk logs with Cribl's Parser and Mask functions, resulting in a concise, easily searchable '\_raw' field, reducing parsing time to 2-3 seconds per log.
-    \item Worked with \textbf{OpenShift} to manage container-based applications in the \textbf{Kubernetes} environment.
-    \item Assisted the SRE team with automating \textbf{Artifactory} management with \textbf{Ansible}, saving 1-2 hours of manual labor every month.
+
+    \experienceItem[
+        company={Arch Mortgage Insurance},
+        location={Greensboro, NC},
+        position={Software Engineer Intern},
+        duration={Jun 2024 - Aug 2024}
+    ]
+    \begin{itemize}
+        \itemsep -6pt {}
+        \item Built a \textbf{JavaScript} and \textbf{Cribl Stream} based scalable data processing solution and created 10+ conditional pipelines for log filtering and transformation, implementing custom business logic to filter and route logs from \textbf{OpenShift} pods to Splunk
+        \item Engineered a container image synchronization system through \textbf{Ansible} automation scripts and \textbf{Red Hat registry} APIs that integrates with \textbf{Nexus Repository} for artifact management, eliminating 90\% of manual update processes
+        
+    \end{itemize}
+
+    \experienceItem[
+        company={Cerner Healthcare},
+        location={Bangalore, KA},
+        position={Software Engineer},
+        duration={May 2021 - Jul 2023}
+    ]
+    \begin{itemize}
+        \itemsep -6pt {}
+        \item Designed cloud migration scripts and data transformation pipelines to migrate 80\% of enterprise data from on-premises infrastructure to AWS, thereby enhancing access flexibility, security, and cost-efficiency
+        \item Automated the monitoring and alerting systems with \textbf{Zabbix} and \textbf{Splunk} APIs, developing custom dashboards and incident response automation that sped production resolution by 30\%
+        \item Troubleshot and resolved \textbf{Jenkins} pipeline issues, minimizing support ticket resolution time by \textbf{40\%} and ensuring \textbf{99.9\%} uptime for \textbf{CI/CD} workflows, leading to uninterrupted deployment pipelines
+        \item Automated deployment orchestration for \textbf{300+} bi-weekly microservice releases, tracked via \textbf{JIRA}, through \textbf{Chef} configuration management and custom deployment scripts, accelerating delivery of new UI and backend features
+    \end{itemize}
+
+\end{experienceSection}
+
+% --------- Projects -----------
+\begin{experienceSection}{Projects}
+
+    \projectItem[
+        title=RAG Implementation for arXiv Papers,
+        duration={Nov 2024},
+    ]
+    \begin{itemize}
+        \vspace{-0.5em}
+        \itemsep -6pt {}
+        \item Devised a multimodal data processing pipeline using \textbf{Python} to extract and vectorize content from \textbf{2000+} arXiv papers, implementing \textbf{CLIP} and text embedding models, \textbf{DynamoDB} indexing and vector database storage
+        \item Implemented a similarity search and summarization pipeline with DynamoDB and GPT-4o mini to deliver concise, contextually relevant responses to user queries with an average response time of under \textbf{2 seconds}.
+    \end{itemize}
+
+    \projectItem[
+        title=AWS-Based Face Recognition App,
+        duration={May 2024},
+    ]
+    \begin{itemize}
+        \vspace{-0.5em}
+        \itemsep -6pt {}
+        \item Created and deployed a scalable \textbf{Flask} web application using \textbf{Python} and \textbf{Gunicorn} on\textbf{ AWS EC2}, implementing HTTP-based image uploads through asynchronous processing pipeline leveraging \textbf{S3} storage and \textbf{SQS} message queuing
+        \item Architected an \textbf{auto-scaling} infrastructure that dynamically scales up to 20 EC2 instances based on SQS queue depth metrics, ensuring optimal performance and cost-efficiency for real-time image processing under variable workloads
+    \end{itemize}
     
-
-\end{itemize}
-
-\noindent
-\textbf{System Engineer - 1}
-\hfill May 2021 - Jul 2023\\ % Position and duration
-\textit{Oracle Cerner, Bengaluru, India}
-\begin{itemize}
-    \item Engaged with the software development team on \textbf{Splunk} upgrades, troubleshooting, and deployments, ensuring up-to-date servers.
-    \item Migrated 80\% data from On-prem to \textbf{AWS}, making access to data more flexible, secure, and inexpensive.
-    \item Integrated \textbf{Jenkins} and \textbf{GitHub} to maintain important documentation and test merge requests for semantic errors, reducing 1-2 hours per week of manual labor.
-    \item Managed \textbf{CI/CD} pipelines to automate and oversee 300+ bi-weekly microservice deployments for web applications, enabling rapid delivery of new UI and backend features.
-    \item Managed over 10 projects and 400+ tasks to completion through \textbf{JIRA}, resulting in smooth and error-free delivery. 
-\end{itemize}
+\end{experienceSection}
 
 
-
-% Projects Section
-\section*{PROJECTS}
-
-\noindent
-\textbf{RAG Implementation for arXiv Papers} \hfill Oct 2024 - Nov 2024\\% Project link and duration
-\textit{Arizona State University, Tempe, Arizona}
-\begin{itemize}
-    
-    \item Extracted tables, images, equations, and text from \textbf{2000+} arXiv papers for vectorization and storage.
-    \item Vectorized and stored them in separate vector stores using models like \textbf{CLIP} and text embedding models.
-    \item Implemented \textbf{similarity search} to retrieve the top 'k' relevant text and image chunks from \textbf{DynamoDB}.
-    \item Summarized retrieved content using the \textbf{OpenAI GPT-4o mini} model, delivering concise, contextually relevant responses to user queries.
-\end{itemize}
-
-\noindent
-\textbf{TCR-Epitope binding affinity prediction}  \hfill Oct 2024 - Nov 2024\\ % Project name and location
-\textit{Arizona State University, Tempe, Arizona} % Project link and duration
-\begin{itemize}
-    \item Developed a machine learning pipeline for TCR-epitope binding affinity prediction, leveraging pre-trained BERT-base-tcr embeddings.
-    \item Trained on a Neural Network with skip connections and 5-fold-cross validation.
-    \item Evaluated the model on key metrics, obtaining around \textbf{75\% accuracy} and \textbf{80\% AUC}, whilst accounting for \textbf{F1}, \textbf{precision} and \textbf{recall} scores.
-    
-\end{itemize}
-
-\noindent
-\textbf{Novel Object Detection Using Reasoning by Elimination} \hfill Aug 2023 - Dec 2023\\% Project link and duration
-\textit{Arizona State University, Tempe, Arizona}
-\begin{itemize}
-    \item Engineered a system with \textbf{PyTorch} to detect 'novel' objects not included in training data.
-    \item Leveraged pre-trained \textbf{ResNet-18} and \textbf{BERT Tokenizer} models to extract features. 
-    \item Computed Cosine similarity and trained the agent with \textbf{reinforcement learning} to eliminate seen objects.
-    \item Generated an automobile-relevant, real-world dataset of 1260 images using \textbf{Stable Diffusion}. % Project description and contributions
-\end{itemize}
-
-% End document
 \end{document}
