Minor change to test github actions workflow

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -68,7 +68,7 @@
 \end{skillsSection}
 
 % --------- Experience -----------
- \begin{experienceSection}{Professional Experience}
+ \begin{experienceSection}{Work Experience}
     \experienceItem[
         company={Arizona State University},
         location={Remote},
