--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -69,7 +69,7 @@
 
 % --------- Experience -----------
 
-    \begin{experienceSection}{Professional Experience}
+    \begin{experienceSection}{Work Experience}
     \experienceItem[
         company={Arizona State University},
         location={Remote},
