Added amsmath package for '\text' to work

--- a/AI/AI.tex
+++ b/AI/AI.tex
@@ -8,7 +8,7 @@
 
 % -------------- Resume ---------------
 \documentclass{resume}
-
+\usepackage{amsmath}
 \begin{document}
 
 % --------- Contact Information -----------
