--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -8,7 +8,7 @@
 
 % -------------- Resume ---------------
 \documentclass{resume}
-
+\usepackage{amsmath}
 \begin{document}
 
 % --------- Contact Information -----------
