Added IaC as a keyword without hyphens

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -63,7 +63,7 @@
     ] \\
     \skillItem[
         category={Miscellaneous},
-        skills={Distributed Systems, RESTful APIs, Microservices Architecture, Object-Oriented Programming, Agile, Test Driven Development (TDD), Infrastructure-as-code, Cloud Infrastructure, Communication Skills, Collaboration, Writing}
+        skills={Distributed Systems, RESTful APIs, Microservices Architecture, Object-Oriented Programming, Agile, Test Driven Development (TDD), Infrastructure as code, Cloud Infrastructure, Communication Skills, Collaboration, Writing}
     ]
 \end{skillsSection}
 
