Added a few common keywords to the DevOps resume

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -47,11 +47,11 @@
     ] \\
     \skillItem[
         category={Technologies},
-        skills={AWS (EC2, Lambda, S3, ECS, CloudFormation, EKS, ECR), TensorFlow, Docker, Kubernetes, Terraform, Knative, Jenkins, Github Actions, Chef React, Angular, Flask, Node.js}
+        skills={AWS (EC2, Lambda, S3, ECS, CloudFormation, EKS, ECR, CloudWatch), GCP, TensorFlow, Docker, Kubernetes, Terraform, Knative, Jenkins, Github Actions, React, Angular, Flask, Node.js, GCP}
     ] \\
     \skillItem[
         category={Tools},
-        skills={Linux (RHEL, Ubuntu), Git (Version Control), Github, Ansible, Gitlab, Nginx, Kafka, Redis, Prometheus, Postman, Cursor, CoPilot, Claude Code}
+        skills={Linux (RHEL, Ubuntu), Unix, Git (Version Control), Bash, Github, Ansible, Chef, Gitlab, Nginx, Kafka, Redis, Prometheus, Grafana, Postman, Cursor, CoPilot, Claude Code}
     ] \\
     \skillItem[
         category={Database Systems},
@@ -63,12 +63,12 @@
     ] \\
     \skillItem[
         category={Miscellaneous},
-        skills={Distributed Systems, RESTful APIs, Microservices Architecture, Object-Oriented Programming, Agile, Test Driven Development (TDD), Infrastructure as code, Cloud Infrastructure, Communication Skills, Collaboration, Writing}
+        skills={Distributed Systems, RESTful APIs, Microservices, Object Oriented Programming, Agile, Test Driven Development (TDD), Infrastructure as code (IaC), DevOps, Cloud Infrastructure, Communication Skills, Collaboration, Writing}
     ]
 \end{skillsSection}
 
 % --------- Experience -----------
- \begin{experienceSection}{Work Experience}
+ \begin{experienceSection}{Professional Experience}
     \experienceItem[
         company={Arizona State University},
         location={Remote},
@@ -120,8 +120,11 @@
     \begin{itemize}
         \vspace{-0.5em}
         \itemsep -6pt {}
-        \item Automated end-to-end AWS EC2 provisioning and cloud infrastructure management using \textbf{Terraform}, \textbf{Ansible}, \textbf{Jenkins}, and \textbf{GitHub Actions}, enabling infrastructure setup and hands-free web service deployments based on version control changes.
-        \item Built and optimized CI/CD pipelines to dynamically retrieve instance IPs, configure secure SSH access, and deploy services, eliminating manual intervention and resolving IAM and resource issues in production-like environments
+
+        \item Automated end-to-end AWS EC2 provisioning and cloud infrastructure management using \textbf{Terraform}, \textbf{Ansible}, \textbf{Jenkins}, and \textbf{GitHub
+Actions}, enabling infrastructure setup and hands-free web service deployments based on version control changes.
+        \item Built and optimized \textbf{CI/CD} pipelines to dynamically retrieve instance IPs, configure secure SSH access, and deploy services,
+        eliminating manual intervention and resolving \textbf{IAM} and resource issues in production-like environments
     \end{itemize}
 
     \projectItem[
