Added Helm as a keyword in DevOps resume

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -117,7 +117,7 @@
     \begin{itemize}
         \vspace{-0.5em}
         \itemsep -6pt {}
-        \item Engineered a highly scalable data processing pipeline using \textbf{Apache Kafka} and \textbf{Neo4j} that processes \textbf{100,000+} NYC taxi records in near-real-time, reducing spatial analytics query time by \textbf{60\%} and enabling real-time traffic pattern identification
+        \item Engineered a highly scalable data processing pipeline using \textbf{Kubernetes} pods for \textbf{Apache Kafka} and \textbf{Neo4j} that processes \textbf{100,000+} NYC taxi records in near-real-time, reducing spatial analytics query time by \textbf{60\%} and enabling real-time traffic pattern identification
     \end{itemize}
     
 \end{experienceSection}
@@ -130,7 +130,7 @@
     ] \\
     \skillItem[
         category={Cloud Technologies},
-        skills={AWS (EC2, Lambda, S3, ECS, CloudFormation, EKS, ECR, CloudWatch), TensorFlow, Docker, Kubernetes, Terraform, Jenkins, Github Actions, GCP}
+        skills={AWS (EC2, Lambda, S3, ECS, CloudFormation, EKS, ECR, CloudWatch), TensorFlow, Docker, Kubernetes, Helm, Terraform, Jenkins, Github Actions, GCP}
     ] \\
     \skillItem[
         category={Tools},
